--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-node_modules
-temp
-.tmp
-dist
-.sass-cache
-app/bower_components
-test/bower_components
-package
-app/scripts/config.js
+/node_modules/
+/dist/
+/tmp/
+/build/
