--- a/app/manifest.json
+++ b/app/manifest.json
@@ -7,14 +7,14 @@
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
-    "16": "images/icon-16.png",
-    "128": "images/icon-128.png"
+    "16": "img/icon-16.png",
+    "128": "img/icon-128.png"
   },
   "default_locale": "en",
   "browser_action": {
     "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "19": "img/icon-19.png",
+      "38": "img/icon-38.png"
     },
     "default_title": "__MSG_title__",
     "default_popup": "popup.html"
