--- a/package.json
+++ b/package.json
@@ -3,6 +3,34 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
-    "gulp": "^3.8.11"
+    "babelify": "^5.0.3",
+    "browserify": "^9.0.3",
+    "chai": "^2.1.1",
+    "chai-as-promised": "^4.2.0",
+    "envc": "^2.1.0",
+    "envify": "^3.2.0",
+    "gulp": "^3.8.11",
+    "gulp-ignore": "^1.2.1",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-jsonminify": "0.0.2",
+    "gulp-minify-html": "^1.0.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-rimraf": "^0.1.1",
+    "gulp-sass": "^1.3.3",
+    "gulp-spawn-mocha": "^2.0.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.1.1",
+    "rimraf": "^2.3.0",
+    "sv-selenium": "^0.2.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.4.0",
+    "wd": "^0.3.11"
+  },
+  "dependencies": {
+    "assert-env": "^0.6.0",
+    "node-bourbon": "^4.2.1-beta1",
+    "react": "^0.12.2"
   }
 }
