--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
   },
   "dependencies": {
     "assert-env": "^0.6.0",
+    "flux": "^2.0.1",
     "node-bourbon": "^4.2.1-beta1",
-    "react": "^0.12.2"
+    "object-assign": "^2.0.0",
+    "react": "^0.12.2",
+    "react-frame-component": "^0.3.0",
+    "superagent": "^0.21.0"
   }
 }
