Initial Product Bar & Product Pane implementation

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,17 @@
 POPUP_URL="https://www.producthunt.com/search"
 SEARCH_URL="https://www.producthunt.com/#!/s/posts/{query}"
+
+API_BASE_URL="https://api.producthunt.com"
+OAUTH_KEY="key"
+OAUTH_SECRET="secret"
+
+PRODUCT_HUNT_HOST="www.producthunt.com"
+
+PRODUCT_BAR_ID="__phc-bar"
+PRODUCT_BAR_HEIGHT="50px"
+
+BODY_CLASS="__phc-body"
+OVERLAY_BODY_CLASS="__phc-no-scroll"
+
+FB_APP_ID="685834971505424"
+TWITTER_VIA="producthunt"
