--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,15 @@
 EXTENSION_ID="pinaciaaafilededpcmmpfeakplinncd"
 POPUP_URL="http://example.com/"
+
+API_BASE_URL="https://api.producthunt.com"
+
+OAUTH_KEY="key"
+OAUTH_SECRET="secret"
+
+PRODUCT_HUNT_HOST="www.producthunt.com"
+
+PRODUCT_BAR_ID="__phc-bar"
+PRODUCT_BAR_HEIGHT="50px"
+
+BODY_CLASS="__phc-body"
+OVERLAY_BODY_CLASS='__phc-no-scroll';
