--- a/src/manifest.json
+++ b/src/manifest.json
@@ -26,9 +26,27 @@
     "keyword": "product"
   },
   "permissions": [
+    "webRequestBlocking",
+    "<all_urls>",
     "webRequest",
     "tabs"
   ],
-  "web_accessible_resources": [],
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "apps/content/main.js"
+      ],
+      "css": [
+        "apps/content/main.css"
+      ],
+      "run_at": "document_end",
+      "all_frames": false
+    }
+  ],
+  "web_accessible_resources": ["apps/content/product-bar.css", "apps/content/assets/comment.svg", "apps/content/assets/arrow_up.svg"],
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://ssl.google-analytics.com https://query.yahooapis.com; object-src 'self'"
 }
