--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "producthunt",
   "private": true,
   "version": "0.0.0",
+  "scripts": {
+    "test": "gulp test"
+  },
   "devDependencies": {
     "babel-jest": "^4.0.0",
     "babelify": "^5.0.3",
