--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "postinstall": "bower install"
   },
   "devDependencies": {
     "babel-jest": "^4.0.0",
@@ -27,6 +28,7 @@
     "gulp-watch": "^4.1.1",
     "harmonize": "^1.4.1",
     "jest-cli": "^0.4.0",
+    "node-neat": "^1.7.1-beta1",
     "react-tools": "^0.12.2",
     "rimraf": "^2.3.0",
     "sv-selenium": "^0.2.5",
@@ -37,13 +39,16 @@
   },
   "dependencies": {
     "assert-env": "^0.6.0",
+    "bower": "^1.3.12",
     "debug": "^2.1.2",
     "flux": "^2.0.1",
     "lscache": "^1.0.5",
+    "moment": "^2.9.0",
     "node-bourbon": "^4.2.1-beta1",
     "object-assign": "^2.0.0",
     "react": "^0.12.2",
     "react-frame-component": "^0.3.0",
+    "react-infinite-scroll": "^0.1.5",
     "superagent": "^0.21.0"
   }
 }
