Show loading indicator when opening the product details

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -47,6 +47,6 @@
       "all_frames": false
     }
   ],
-  "web_accessible_resources": ["apps/content/product-bar.css", "apps/content/assets/comment.svg", "apps/content/assets/arrow_up.svg"],
+  "web_accessible_resources": ["apps/content/product-bar.css", "apps/content/assets/comment.svg", "apps/content/assets/arrow_up.svg", "common/loader/loader.png"],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
