--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "assert-env": "^0.6.0",
+    "async": "^0.9.0",
     "bower": "^1.3.12",
     "debug": "^2.1.2",
     "flux": "^2.0.1",
