--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,7 @@
     "newtab": "apps/tabs/main.html"
   },
   "name": "__MSG_appName__",
+  "options_page": "apps/options/main.html",
   "version": "0.0.24",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
@@ -28,6 +29,7 @@
   "permissions": [
     "webRequestBlocking",
     "<all_urls>",
+    "storage",
     "webRequest",
     "tabs"
   ],
