Render the "x" product pane button inside an iframe

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -49,6 +49,6 @@
       "all_frames": false
     }
   ],
-  "web_accessible_resources": ["apps/content/product-bar.css", "apps/content/assets/comment.svg", "apps/content/assets/arrow_up.svg", "common/loader/loader.png"],
+  "web_accessible_resources": ["apps/content/product-bar.css", "apps/content/assets/comment.svg", "apps/content/assets/arrow_up.svg", "common/loader/loader.png", "common/product-pane/close.css"],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
