--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,10 @@
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "background": {
-    "scripts": ["apps/background/main.js"]
+    "scripts": [
+      "vendor/analytics.js",
+      "apps/background/main.js"
+    ]
   },
   "icons": {
     "16": "apps/base/icon-16.png",
