--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "assert-env": "^0.6.0",
     "async": "^0.9.0",
     "bower": "^1.3.12",
-    "debug": "^2.1.2",
+    "debug": "2.1.0",
     "flux": "^2.0.1",
     "lscache": "^1.0.5",
     "moment": "^2.9.0",
