--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "envc": "^2.1.0",
     "envify": "^3.2.0",
     "gulp": "^3.8.11",
+    "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.2.1",
     "gulp-jsonminify": "0.0.2",
+    "gulp-minify-css": "^1.0.0",
     "gulp-minify-html": "^1.0.0",
     "gulp-rimraf": "^0.1.1",
     "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.1",
     "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
