--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bower": "^1.3.12",
     "debug": "2.1.0",
     "flux": "^2.0.1",
+    "gulp-zip": "^3.0.2",
     "lscache": "^1.0.5",
     "moment": "^2.9.0",
     "node-bourbon": "^4.2.1-beta1",
