Add more unit tests

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 EXTENSION_ID="pinaciaaafilededpcmmpfeakplinncd"
 POPUP_URL="http://example.com/"
+SEARCH_URL="http://example.com/"
 
 API_BASE_URL="https://api.producthunt.com"
 
@@ -13,3 +14,6 @@ PRODUCT_BAR_HEIGHT="50px"
 
 BODY_CLASS="__phc-body"
 OVERLAY_BODY_CLASS='__phc-no-scroll';
+
+BAR_DISABLED_KEY="barDisabled"
+TAB_DISABLED_KEY="tabDisabled"
