Change the omnibox keyword to "ph"

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -27,7 +27,7 @@
     "default_popup": "apps/popup/main.html"
   },
   "omnibox": {
-    "keyword": "product"
+    "keyword": "ph"
   },
   "permissions": [
     "*://www.producthunt.com/*",
