Support building an extension without a default tab

--- a/.env.assert
+++ b/.env.assert
@@ -10,9 +10,11 @@ FB_APP_ID
 TWITTER_VIA
 PRODUCTS_CACHE_KEY
 BAR_DISABLED_KEY
-TAB_DISABLED_KEY
 PRODUCT_BAR_ID
 PRODUCT_BAR_HEIGHT
 BODY_CLASS
 OVERLAY_BODY_CLASS
 EXTENSION_ID
+EXT_ENABLED_TAB_URL
+EXT_DISABLED_TAB_URL
+DEFAULT_TAB_DISABLED
