--- a/.env.example
+++ b/.env.example
@@ -47,9 +47,6 @@ PRODUCTS_CACHE_KEY="ph.chrome.products"
 # Settings; Product Bar disabled key
 BAR_DISABLED_KEY="barDisabled"
 
-# Settings: Default Tab disabled key
-TAB_DISABLED_KEY="tabDisabled"
-
 #------------------------------------
 # 5. Runtime CSS & HTML
 #------------------------------------
@@ -72,3 +69,12 @@ OVERLAY_BODY_CLASS="__phc-no-scroll"
 
 # Google Chrome Extension ID
 EXTENSION_ID="likjafohlgffamccflcidmedfongmkee"
+
+# Link to the Chrome Extension WITH a default tab
+EXT_ENABLED_TAB_URL="https://chrome.google.com/webstore/detail/product-hunt/likjafohlgffamccflcidmedfongmkee"
+
+# Link to the Chrome Extension WITHOUT a default tab
+EXT_DISABLED_TAB_URL="https://chrome.google.com/webstore/detail/product-hunt/likjafohlgffamccflcidmedfongmkee"
+
+# Set to "truthy" to disable the default tab entirely
+DEFAULT_TAB_DISABLED=""
