--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gulp-minify-css": "^1.0.0",
     "gulp-minify-html": "^1.0.0",
     "gulp-rimraf": "^0.1.1",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-spawn-mocha": "^2.0.1",
     "gulp-uglify": "^1.1.0",
@@ -29,7 +29,7 @@
     "gulp-watch": "^4.1.1",
     "gulp-zip": "^3.0.2",
     "harmonize": "^1.4.1",
-    "jest-cli": "^0.4.0",
+    "jest-cli": "^0.5.0",
     "node-neat": "^1.7.1-beta1",
     "react-tools": "^0.12.2",
     "rimraf": "^2.3.0",
@@ -57,7 +57,9 @@
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "testPathDirs": ["<rootDir>/src"],
+    "testPathDirs": [
+      "<rootDir>/src"
+    ],
     "setupEnvScriptFile": "<rootDir>/jest/env.js",
     "setupTestFrameworkScriptFile": "<rootDir>/jest/setup.js"
   }
