--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "babel-jest": "^4.0.0",
     "babelify": "^5.0.3",
     "browserify": "^9.0.3",
-    "chai": "^2.1.1",
-    "chai-as-promised": "^4.2.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "envc": "^2.1.0",
     "envify": "^3.2.0",
     "gulp": "^3.8.11",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jsonminify": "0.0.2",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-jsonminify": "^1.0.0",
     "gulp-minify-css": "^1.0.0",
     "gulp-minify-html": "^1.0.0",
-    "gulp-rimraf": "^0.1.1",
-    "gulp-sass": "^2.3.2",
+    "gulp-rimraf": "^0.2.1",
+    "gulp-sass": "^3.0.0",
     "gulp-sourcemaps": "^1.5.1",
-    "gulp-spawn-mocha": "^2.0.1",
-    "gulp-uglify": "^1.1.0",
+    "gulp-spawn-mocha": "^3.1.0",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.1.1",
     "gulp-zip": "^3.0.2",
@@ -42,13 +42,14 @@
     "assert-env": "^0.6.0",
     "async": "^0.9.0",
     "bower": "^1.3.12",
-    "debug": "2.1.0",
-    "flux": "^2.0.1",
+    "debug": "^2.5.1",
+    "flux": "^3.1.2",
     "lscache": "^1.0.5",
+    "mocha": "3.2.0",
     "moment": "^2.9.0",
     "node-bourbon": "^4.2.1-beta1",
-    "object-assign": "^2.0.0",
-    "query-string": "^1.0.0",
+    "object-assign": "^4.1.0",
+    "query-string": "^4.2.3",
     "react": "^0.12.2",
     "react-frame-component": "^0.3.0",
     "react-infinite-scroll": "^0.1.5",
