--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "moment": "^2.9.0",
     "object-assign": "^4.1.0",
     "query-string": "^4.2.3",
-    "react": "^0.12.2",
-    "react-infinite-scroll": "^0.1.5",
+    "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dom": "^15.4.1",
     "superagent": "^0.21.0"
   },
   "jest": {
