--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "devDependencies": {
     "babel-jest": "^4.0.0",
-    "babelify": "^5.0.3",
-    "browserify": "^9.0.3",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "envc": "^2.1.0",
-    "envify": "^3.2.0",
+    "envify": "^4.0.0",
     "gulp": "^3.8.11",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
@@ -35,12 +35,14 @@
     "sv-selenium": "^0.2.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "^2.4.0",
+    "watchify": "^3.8.0",
     "wd": "^0.3.11"
   },
   "dependencies": {
     "assert-env": "^0.6.0",
     "async": "^0.9.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "bower": "^1.3.12",
     "debug": "^2.5.2",
     "flux": "^3.1.2",
